[package]
name = "wasmex"
version = "0.8.3"
authors = ["Philipp Tessenow <philipp@tessenow.org>"]
description = "Elixir extension to run WebAssembly binaries through wasmtime"
readme = "README.md"
repository = "https://github.com/tessi/wasmex"
keywords = ["elixir", "extension", "webassembly", "wasmtime"]
categories = ["wasm"]
edition = "2021"

[lib]
name = "wasmex"
path = "src/lib.rs"
crate-type = ["dylib"]

[dependencies]
# anyhow = "1.0.71"
once_cell = "1.17.1"
rand = "0.8.5"
rustler = "0.28.0"
tokio = { version = "1.28", features = ["full"] }
wasi-common = "9.0.1"
wasmtime = "9.0.1"
wasmtime-wasi = "9.0.1"
wat = "1.0.65"
wiggle = "9.0.1"
